--- a/PBApp/Base.lproj/Main.storyboard
+++ b/PBApp/Base.lproj/Main.storyboard
@@ -194,6 +194,9 @@
                                         <state key="normal">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
+                                        <connections>
+                                            <segue destination="nXF-vj-Thb" kind="unwind" unwindAction="unwindToViewController:" id="4fc-KS-EEF"/>
+                                        </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZSl-dF-4xm" customClass="DesignableView" customModule="PBApp" customModuleProvider="target">
                                         <rect key="frame" x="20" y="144" width="280" height="280"/>
@@ -289,6 +292,7 @@
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="s5W-ld-o7h" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="nXF-vj-Thb" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="-225" y="998"/>
         </scene>
